fix comment widget not centered on mobile after recent changes

--- a/src/static/css/blog.css
+++ b/src/static/css/blog.css
@@ -246,3 +246,7 @@ body {
 .content .posts .post .post-comment-count {
     display: inline;
 }
+
+.post-comment-widget {
+    margin-left: -10px
+}
